correction affichage fork

--- a/FirstTTGO/platformio.ini
+++ b/FirstTTGO/platformio.ini
@@ -10,6 +10,37 @@
 
 [env:ttgo-lora32-v1]
 platform = espressif32
-board = ttgo-lora32-v1
+board = esp32dev
 framework = arduino
-lib_deps = bodmer/TFT_eSPI@^2.4.75
+monitor_speed = 115200
+upload_speed = 921600
+lib_deps = 
+    bodmer/TFT_eSPI@^2.4.75
+    TFT_eSPI
+
+build_flags =
+  -DCORE_DEBUG_LEVEL=0
+  -DTTGO
+  -DUSER_SETUP_LOADED=25
+  -DST7789_DRIVER
+  -DTFT_SDA_READ   
+  -DTFT_WIDTH=135
+  -DTFT_HEIGHT=240
+  -DCGRAM_OFFSET      
+  -DTFT_MOSI=19
+  -DTFT_SCLK=18
+  -DTFT_CS=5
+  -DTFT_DC=16
+  -DTFT_RST=23
+  -DTFT_BL=4  
+  -DTFT_BACKLIGHT_ON=HIGH  
+  -DLOAD_GLCD
+  -DLOAD_FONT2
+  -DLOAD_FONT4
+  -DLOAD_FONT6
+  -DLOAD_FONT7
+  -DLOAD_FONT8
+  -DLOAD_GFXFF
+  -DSMOOTH_FONT
+  -DSPI_FREQUENCY=40000000   
+  -DSPI_READ_FREQUENCY=6000000
